--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -25,6 +25,10 @@ a:hover{text-decoration:none;}
 .btn-rojo{font-weight:bold;background-color:$color-rojiso;color:#fff;padding: 0.5em 1em;text-decoration:none;margin:2em auto;}
 .btn-plomo{font-weight:bold;background-color:#95A6AB;color:#fff;padding: 0.5em 1em;text-decoration:none;margin:2em auto;}
 .borde-inf{	border-bottom:1px solid $color-texto;padding:0.5em 0;}
+.justificado{text-align:justify;}
+.left{text-align:left;}
+.right{text-align:right;}
+.enlinea{display:inline-block;}
 
 #blog,#columnistas{
 	h1{font-family: "Courgette", sans-serif; font-weight:700;}
@@ -81,6 +85,10 @@ a:hover{text-decoration:none;}
 		p{color:#383661; text-align:left; font-size:11px; font-weight:bold;}
 		.col-xs-7{padding:0;}
 	}
+}
+#contacto{
+	h1{font-family: "Courgette", sans-serif; font-weight:700;}
+	..enviar{text-align:center;}
 }
 
 .ultima-noticia{
