--- a/assets/jade/ci/layout.jade
+++ b/assets/jade/ci/layout.jade
@@ -19,13 +19,9 @@ html(lang='es-PE')
 										+header-lista('FUNDACION GUSTAVO MOHME LLONA')
 							block header-redes
 								.col-md-6
-									ul.list-unstyled.list-inline
+									ul.list-unstyled.list-inline.list-redes
 										+header-lista('SUSCRIBETE AL BOLETIN')
-										+li-span('fa fa-facebook')
-										+li-span('fa fa-twitter')
-										+li-span('fa fa-google-plus')
-										+li-span('fa fa-envelope')
-										+li-span('fa fa-rss')
+										+li-span-color('fa fa-facebook',{color: '#112E8D'})
 										li
 											input(placeholder="Buscar")
 											span.fa.fa-search
