--- a/assets/jade/ci/mixin.jade
+++ b/assets/jade/ci/mixin.jade
@@ -48,13 +48,18 @@ mixin li-a-img(tema,imagen)
 	li
 		a(href="#")= tema
 			img(src= imagen)
+mixin list-span-color(span, args)
+	li.li-span
+		a(href="#")
+			span(class= span)
+				!=args.span
 mixin li-span(span)
-	li
+	li.li-span
 		a(href="#")&attributes(attributes)
 			span(class= span)
 mixin header-lista(item)
 	li
-		a(href="#")= item
+		a.t-plomo.mg-0.pd-0.text-10.font-weight-bold(href="#")= item
 mixin header-editorial(titulo,subtitulo)
 	.div
 		h4= titulo
