avance css index

--- a/assets/jade/ci/layout.jade
+++ b/assets/jade/ci/layout.jade
@@ -21,7 +21,11 @@ html(lang='es-PE')
 								.col-md-6
 									ul.list-unstyled.list-inline.list-redes
 										+header-lista('SUSCRIBETE AL BOLETIN')
-										+li-span-color('fa fa-facebook',{color: '#112E8D'})
+										+li-span('fa fa-facebook','azul')
+										+li-span('fa fa-twitter','celeste')
+										+li-span('fa fa-google-plus','rojo')
+										+li-span('fa fa-envelope','amarillo')
+										+li-span('fa fa-rss','naranja')
 										li
 											input(placeholder="Buscar")
 											span.fa.fa-search
