--- a/assets/jade/ci/layout.jade
+++ b/assets/jade/ci/layout.jade
@@ -12,23 +12,23 @@ html(lang='es-PE')
 							+imagen('../image/banner_top.jpg')
 						.row
 							block header-list
-								.col-md-6
-									ul.list-unstyled.list-inline
+								.col-sm-6.mg-0.pd-0
+									ul.list-unstyled.list-inline.mg-0.pd-0.ptb-2
 										+header-lista('LIBERO.PE')
 										+header-lista('ELPOPULAR.PE')
 										+header-lista('FUNDACION GUSTAVO MOHME LLONA')
 							block header-redes
-								.col-md-6
-									ul.list-unstyled.list-inline.list-redes
+								.col-sm-6.mg-0.pd-0
+									ul.list-unstyled.list-inline.list-redes.mg-0.pd-0.inline-block.ptb-2
 										+header-lista('SUSCRIBETE AL BOLETIN')
 										+li-span('fa fa-facebook','azul')
 										+li-span('fa fa-twitter','celeste')
 										+li-span('fa fa-google-plus','rojo')
 										+li-span('fa fa-envelope','amarillo')
 										+li-span('fa fa-rss','naranja')
-										li
-											input(placeholder="Buscar")
-											span.fa.fa-search
+									.pull-right.inline-block.ptb-2.input-redes-div
+										input.input-redes.text-10(placeholder="BUSCAR")
+										span.fa.fa-search.text-10
 				.col-md-2
 			.row
 				.col-md-2
@@ -42,9 +42,10 @@ html(lang='es-PE')
 								block header-editorial-noticia
 							.col-md-4
 								block autor
-									+imagen('../image/img_editorial_text.jpg')
-									+autor('La corrupción, los origenes','Gustavo Mohme Llona')
-									+imagen('../image/img_author.jpg')
+									.div-editorial
+										+imagen('../image/img_editorial_text.jpg')
+										+autor('La corrupción, los origenes','Gustavo Mohme Llona')
+										+imagen('../image/img_author.jpg')
 					block header-menu
 						ul.list-unstyled.list-inline
 							+header-lista('POLITICA')
