--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -27,20 +27,21 @@ block content
 	+divisor-seccion('COLUMNISTAS')
 	ul.list-unstyled.list-inline
 		+home-columnista('../image/img-columnistas.jpg','Mario Vargas Llosa','Megarrenuncia apulpinante')
+		+home-columnista('../image/img_blogueros.jpg','Augusto Álvarez Rodrich','Respuesta a una derrota estridente')
 		+home-columnista('../image/img-columnistas.jpg','Mario Vargas Llosa','Megarrenuncia apulpinante')
+		+home-columnista('../image/img_blogueros.jpg','Augusto Álvarez Rodrich','Respuesta a una derrota estridente')
 		+home-columnista('../image/img-columnistas.jpg','Mario Vargas Llosa','Megarrenuncia apulpinante')
-		+home-columnista('../image/img-columnistas.jpg','Mario Vargas Llosa','Megarrenuncia apulpinante')
-		+home-columnista('../image/img-columnistas.jpg','Mario Vargas Llosa','Megarrenuncia apulpinante')
-		+home-columnista('../image/img-columnistas.jpg','Mario Vargas Llosa','Megarrenuncia apulpinante')
+		+home-columnista('../image/img_blogueros.jpg','Augusto Álvarez Rodrich','Respuesta a una derrota estridente')
+		
 	//- Noticias secundaria
 	.row
 		.col-sm-8
 			.row
 				+home-especiales('.col-xs-6','Mercado de Pases 2015','../image/img_especiales.jpg','Mercado de pases 2015: altas,bajas y rumores de los equipos peruanos','Todo sobre Mercado de Pases 2015')
-				+home-especiales('.col-xs-6','Mercado de Pases 2015','../image/img_especiales.jpg','Mercado de pases 2015: altas,bajas y rumores de los equipos peruanos','Todo sobre Mercado de Pases 2015')
+				+home-especiales('.col-xs-6','Régimen laboral juvenil','../image/img_especiales_aside.jpg','Ollanta Humala:Los que han perdido, más alla de tambores y paderetas, son dos millones de jóvenes','Todo sobre Régimen laboral juvenil')
 			.row
-				+home-especiales('.col-xs-6','Mercado de Pases 2015','../image/img_especiales.jpg','Mercado de pases 2015: altas,bajas y rumores de los equipos peruanos','Todo sobre Mercado de Pases 2015')
-				+home-especiales('.col-xs-6','Mercado de Pases 2015','../image/img_especiales.jpg','Mercado de pases 2015: altas,bajas y rumores de los equipos peruanos','Todo sobre Mercado de Pases 2015')
+				+home-especiales('.col-xs-6','Champions League','../image/img_especiales_champions.jpg','Podrá el Real Madrid conseguir la "Úndecima"?','Todo sobre Champions League')
+				+home-especiales('.col-xs-6','Super Bowl','../image/img_especiales_bowl.jpg','Super Bowl XLIX:New England Patriots se consagró campeón la NFL al ganar 28-24 a Seahawks | VIDEO','Todo sobre Super Bowl')
 		.col-sm-4
 			+imagen('../image/banner-aside-home.jpg')
 	.row
@@ -49,10 +50,39 @@ block content
 		.col-sm-8
 			+seccion-descripcion('ULTIMAS NOTICIAS')
 			ul.list-unstyled.list-inline
-				+ultimas-noticias('Hace 1 hora 12 min','Emma Watson protagonizara "La bella y la bestia"','../image/img_news.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione nihil mollitia possimus distinctio maiores perspiciatis dignissimos maxime dolorem quam...','10','ESPECTACULOS')
-				+ultimas-noticias('Hace 1 hora 12 min','Emma Watson protagonizara "La bella y la bestia"','../image/img_news.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione nihil mollitia possimus distinctio maiores perspiciatis dignissimos maxime dolorem quam...','10','ESPECTACULOS')
-				+ultimas-noticias('Hace 1 hora 12 min','Emma Watson protagonizara "La bella y la bestia"','../image/img_news.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione nihil mollitia possimus distinctio maiores perspiciatis dignissimos maxime dolorem quam...','10','ESPECTACULOS')
-				+ultimas-noticias('Hace 1 hora 12 min','Emma Watson protagonizara "La bella y la bestia"','../image/img_news.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione nihil mollitia possimus distinctio maiores perspiciatis dignissimos maxime dolorem quam...','10','ESPECTACULOS')
+				+ultimas-noticias('Hace 1 hora 12 mins','Emma Watson protagonizará "La bella y la bestia" |VIDEO','../image/img_news.jpg','La actriz Emma Watson fue confirmada por Disney como la protagonista de la "La bella y la bestia"en la versión de carne y hueso.','10','ESPECTÁCULOS')
+				+ultimas-noticias('Hace 1 hora 12 mins','Roque Benavides respalda proyecto Tía María y espera que Conga se socialice','../image/post-img-sample.jpg','Zenaida Condori Contreras Arequipa para el presidente de la Compañia de Minas Buenaventura,Roque Benavides, el proyecto Tía María, que promueve Southern Perú, ya debe...','0','AREQUIPA')
+				+ultimas-noticias('Hace 1 hora 12 mins','YouTube:hombre finge ahogarse y su perro lo rescata |FOTOS','../image/img_sd_mascota.jpg','La actriz Emma Watson fue confirmda por disney como la protagonista de "La bella y la bestia" en la versión d ecarne y hueso','10','ESPECTÁCULOS')
+				+ultimas-noticias('Hace 1 hora 12 mins','Real Madrid: Cristiano Ronaldo fue sancionado con dos partidos y sí estará contra el atlético de Madrid','../image/img_video_destacado.jpg',' Después de la pésima actitud de Cristiano Ronaldo, al agredir a Edimar en el partido del cuadro madridista contra el Córdova, el comité de Competición ha llegado a la...','0','AREQUIPA')
+				+ultimas-noticias('Hace 1 hora 12 mins','Emma Watson protagonizará "La bella y la bestia" |VIDEO','../image/img_news.jpg','La actriz Emma Watson fue confirmada por Disney como la protagonista de la "La bella y la bestia"en la versión de carne y hueso.','10','ESPECTÁCULOS')
+				+ultimas-noticias('Hace 1 hora 12 mins','Roque Benavides respalda proyecto Tía María y espera que Conga se socialice','../image/post-img-sample.jpg','Zenaida Condori Contreras Arequipa para el presidente de la Compañia de Minas Buenaventura,Roque Benavides, el proyecto Tía María, que promueve Southern Perú, ya debe...','0','AREQUIPA')
+				+ultimas-noticias('Hace 1 hora 12 mins','YouTube:hombre finge ahogarse y su perro lo rescata |FOTOS','../image/img_sd_mascota.jpg','La actriz Emma Watson fue confirmda por disney como la protagonista de "La bella y la bestia" en la versión d ecarne y hueso','10','ESPECTÁCULOS')
+				+ultimas-noticias('Hace 1 hora 12 mins','Real Madrid: Cristiano Ronaldo fue sancionado con dos partidos y sí estará contra el atlético de Madrid','../image/img_video_destacado.jpg',' Después de la pésima actitud de Cristiano Ronaldo, al agredir a Edimar en el partido del cuadro madridista contra el Córdova, el comité de Competición ha llegado a la...','0','AREQUIPA')
+				+ultimas-noticias('Hace 1 hora 12 mins','Emma Watson protagonizará "La bella y la bestia" |VIDEO','../image/img_news.jpg','La actriz Emma Watson fue confirmada por Disney como la protagonista de la "La bella y la bestia"en la versión de carne y hueso.','10','ESPECTÁCULOS')
+				+ultimas-noticias('Hace 1 hora 12 mins','Roque Benavides respalda proyecto Tía María y espera que Conga se socialice','../image/post-img-sample.jpg','Zenaida Condori Contreras Arequipa para el presidente de la Compañia de Minas Buenaventura,Roque Benavides, el proyecto Tía María, que promueve Southern Perú, ya debe...','0','AREQUIPA')
+				+ultimas-noticias('Hace 1 hora 12 mins','YouTube:hombre finge ahogarse y su perro lo rescata |FOTOS','../image/img_sd_mascota.jpg','La actriz Emma Watson fue confirmda por disney como la protagonista de "La bella y la bestia" en la versión d ecarne y hueso','10','ESPECTÁCULOS')
+				+ultimas-noticias('Hace 1 hora 12 mins','Real Madrid: Cristiano Ronaldo fue sancionado con dos partidos y sí estará contra el atlético de Madrid','../image/img_video_destacado.jpg',' Después de la pésima actitud de Cristiano Ronaldo, al agredir a Edimar en el partido del cuadro madridista contra el Córdova, el comité de Competición ha llegado a la...','0','AREQUIPA')
+				+ultimas-noticias('Hace 1 hora 12 mins','Emma Watson protagonizará "La bella y la bestia" |VIDEO','../image/img_news.jpg','La actriz Emma Watson fue confirmada por Disney como la protagonista de la "La bella y la bestia"en la versión de carne y hueso.','10','ESPECTÁCULOS')
+				+ultimas-noticias('Hace 1 hora 12 mins','Roque Benavides respalda proyecto Tía María y espera que Conga se socialice','../image/post-img-sample.jpg','Zenaida Condori Contreras Arequipa para el presidente de la Compañia de Minas Buenaventura,Roque Benavides, el proyecto Tía María, que promueve Southern Perú, ya debe...','0','AREQUIPA')
+				+ultimas-noticias('Hace 1 hora 12 mins','YouTube:hombre finge ahogarse y su perro lo rescata |FOTOS','../image/img_sd_mascota.jpg','La actriz Emma Watson fue confirmda por disney como la protagonista de "La bella y la bestia" en la versión d ecarne y hueso','10','ESPECTÁCULOS')
+				+ultimas-noticias('Hace 1 hora 12 mins','Real Madrid: Cristiano Ronaldo fue sancionado con dos partidos y sí estará contra el atlético de Madrid','../image/img_video_destacado.jpg',' Después de la pésima actitud de Cristiano Ronaldo, al agredir a Edimar en el partido del cuadro madridista contra el Córdova, el comité de Competición ha llegado a la...','0','AREQUIPA')
+				+ultimas-noticias('Hace 1 hora 12 mins','Emma Watson protagonizará "La bella y la bestia" |VIDEO','../image/img_news.jpg','La actriz Emma Watson fue confirmada por Disney como la protagonista de la "La bella y la bestia"en la versión de carne y hueso.','10','ESPECTÁCULOS')
+				+ultimas-noticias('Hace 1 hora 12 mins','Roque Benavides respalda proyecto Tía María y espera que Conga se socialice','../image/post-img-sample.jpg','Zenaida Condori Contreras Arequipa para el presidente de la Compañia de Minas Buenaventura,Roque Benavides, el proyecto Tía María, que promueve Southern Perú, ya debe...','0','AREQUIPA')
+				+ultimas-noticias('Hace 1 hora 12 mins','YouTube:hombre finge ahogarse y su perro lo rescata |FOTOS','../image/img_sd_mascota.jpg','La actriz Emma Watson fue confirmda por disney como la protagonista de "La bella y la bestia" en la versión d ecarne y hueso','10','ESPECTÁCULOS')
+				+ultimas-noticias('Hace 1 hora 12 mins','Real Madrid: Cristiano Ronaldo fue sancionado con dos partidos y sí estará contra el atlético de Madrid','../image/img_video_destacado.jpg',' Después de la pésima actitud de Cristiano Ronaldo, al agredir a Edimar en el partido del cuadro madridista contra el Córdova, el comité de Competición ha llegado a la...','0','AREQUIPA')
+				+ultimas-noticias('Hace 1 hora 12 mins','Emma Watson protagonizará "La bella y la bestia" |VIDEO','../image/img_news.jpg','La actriz Emma Watson fue confirmada por Disney como la protagonista de la "La bella y la bestia"en la versión de carne y hueso.','10','ESPECTÁCULOS')
+				+ultimas-noticias('Hace 1 hora 12 mins','Roque Benavides respalda proyecto Tía María y espera que Conga se socialice','../image/post-img-sample.jpg','Zenaida Condori Contreras Arequipa para el presidente de la Compañia de Minas Buenaventura,Roque Benavides, el proyecto Tía María, que promueve Southern Perú, ya debe...','0','AREQUIPA')
+				+ultimas-noticias('Hace 1 hora 12 mins','YouTube:hombre finge ahogarse y su perro lo rescata |FOTOS','../image/img_sd_mascota.jpg','La actriz Emma Watson fue confirmda por disney como la protagonista de "La bella y la bestia" en la versión d ecarne y hueso','10','ESPECTÁCULOS')
+				+ultimas-noticias('Hace 1 hora 12 mins','Real Madrid: Cristiano Ronaldo fue sancionado con dos partidos y sí estará contra el atlético de Madrid','../image/img_video_destacado.jpg',' Después de la pésima actitud de Cristiano Ronaldo, al agredir a Edimar en el partido del cuadro madridista contra el Córdova, el comité de Competición ha llegado a la...','0','AREQUIPA')
+				+ultimas-noticias('Hace 1 hora 12 mins','Emma Watson protagonizará "La bella y la bestia" |VIDEO','../image/img_news.jpg','La actriz Emma Watson fue confirmada por Disney como la protagonista de la "La bella y la bestia"en la versión de carne y hueso.','10','ESPECTÁCULOS')
+				+ultimas-noticias('Hace 1 hora 12 mins','Roque Benavides respalda proyecto Tía María y espera que Conga se socialice','../image/post-img-sample.jpg','Zenaida Condori Contreras Arequipa para el presidente de la Compañia de Minas Buenaventura,Roque Benavides, el proyecto Tía María, que promueve Southern Perú, ya debe...','0','AREQUIPA')
+				+ultimas-noticias('Hace 1 hora 12 mins','YouTube:hombre finge ahogarse y su perro lo rescata |FOTOS','../image/img_sd_mascota.jpg','La actriz Emma Watson fue confirmda por disney como la protagonista de "La bella y la bestia" en la versión d ecarne y hueso','10','ESPECTÁCULOS')
+				+ultimas-noticias('Hace 1 hora 12 mins','Real Madrid: Cristiano Ronaldo fue sancionado con dos partidos y sí estará contra el atlético de Madrid','../image/img_video_destacado.jpg',' Después de la pésima actitud de Cristiano Ronaldo, al agredir a Edimar en el partido del cuadro madridista contra el Córdova, el comité de Competición ha llegado a la...','0','AREQUIPA')
+				+ultimas-noticias('Hace 1 hora 12 mins','Emma Watson protagonizará "La bella y la bestia" |VIDEO','../image/img_news.jpg','La actriz Emma Watson fue confirmada por Disney como la protagonista de la "La bella y la bestia"en la versión de carne y hueso.','10','ESPECTÁCULOS')
+				+ultimas-noticias('Hace 1 hora 12 mins','Roque Benavides respalda proyecto Tía María y espera que Conga se socialice','../image/post-img-sample.jpg','Zenaida Condori Contreras Arequipa para el presidente de la Compañia de Minas Buenaventura,Roque Benavides, el proyecto Tía María, que promueve Southern Perú, ya debe...','0','AREQUIPA')
+				+ultimas-noticias('Hace 1 hora 12 mins','YouTube:hombre finge ahogarse y su perro lo rescata |FOTOS','../image/img_sd_mascota.jpg','La actriz Emma Watson fue confirmda por disney como la protagonista de "La bella y la bestia" en la versión d ecarne y hueso','10','ESPECTÁCULOS')
+				+ultimas-noticias('Hace 1 hora 12 mins','Real Madrid: Cristiano Ronaldo fue sancionado con dos partidos y sí estará contra el atlético de Madrid','../image/img_video_destacado.jpg',' Después de la pésima actitud de Cristiano Ronaldo, al agredir a Edimar en el partido del cuadro madridista contra el Córdova, el comité de Competición ha llegado a la...','0','AREQUIPA')
+				+ultimas-noticias('Hace 1 hora 12 mins','Real Madrid: Cristiano Ronaldo fue sancionado con dos partidos y sí estará contra el atlético de Madrid','../image/img_video_destacado.jpg',' Después de la pésima actitud de Cristiano Ronaldo, al agredir a Edimar en el partido del cuadro madridista contra el Córdova, el comité de Competición ha llegado a la...','0','AREQUIPA')
 		.col-sm-4
 			//-suscribete
 			.row.mg-medio
@@ -65,29 +95,29 @@ block content
 			.row.aweita.pd-medio.mg-medio
 				+imagen('../image/logo_aweita.jpg')
 				ul.list-unstyled.list-inline
-					+art('../image/img_aweita.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
-					+art('../image/img_grid_especiales.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
-					+art('../image/img_aweita.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
-					+art('../image/img_grid_especiales.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
-				a.borde-bajo.text-10(href="#") Mas en 
-					span aweita.pe
+					+art('../image/img_aweita.jpg',' Juan Romàn Riquelme, el adiós al "Último 10" de Argentina')
+					+art('../image/img_grid_especiales.jpg',' Lewis Carroll:un día como hoy nació el autor de Alicia en el')
+					+art('../image/img_aweita.jpg','Juan Romàn Riquelme, el adiós al "Último 10" de Argentina')
+					+art('../image/img_grid_especiales.jpg',' Gameplay de "Dead Kings", el descargable premiun de "Assassins')
+				a.borde-bajo.text-10(href="#") Más en 
+					span Aweita.pe
 			//-fotos destacadas
 			.row.destacadas.borde-inf.pd-medio
 				a.btn-plomo(href="#") FOTOS DESTACADAS
 				+imagen('../image/img_fotodes_prominent.jpg')
 				a.t-negro(href="#") Lineas de Nazca: admiten prision preventiva de 6 meses para activistas de Greenpeace
 				ul.list-unstyled.list-inline
-					+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
-					+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
-					+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+					+art('../image/img_fotodes.jpg','Uchuraccay:El pueblo que recibe con flores a quienes llegan a pie |FOTOS')
+					+art('../image/img_fotodes.jpg',' Alianza Lima vs Fénix: íntimos ganaron 1-0 en "Noche Blanquiazul"|VIDEOS Y FOTOS')
+					+art('../image/img_especiales_tenis.jpg','Tomas Berdych derrotó3-0 a Rafael Nadal y avanzó en el Australian Open|FOTOS')
 			//-especiales
 			.row.especiales.borde-inf.pd-medio
 				a.btn-plomo(href="#") ESPECIALES
 				ul.list-unstyled.list-inline
-					+imagen-capa('../image/img_especiales.jpg','Regimen laboral juvenil')
-					+imagen-capa('../image/img_especiales.jpg','Regimen laboral juvenil')
-					+imagen-capa('../image/img_especiales.jpg','Regimen laboral juvenil')
-					+imagen-capa('../image/img_especiales.jpg','Regimen laboral juvenil')
+					+imagen-capa('../image/img_especiales_aside.jpg','Regimen laboral juvenil')
+					+imagen-capa('../image/img_especiales_papa.jpg','COP 20')
+					+imagen-capa('../image/img_especiales_cesar.jpg','Concentración de Medios')
+					+imagen-capa('../image/img_especiales_tala.jpg','Especies peruanas en peligro de extinción')
 			//-calicantura
 			.row.borde-inf.mg-medio
 				a.btn-rojo(href="#") CALICANTURA DEL DIA
@@ -99,17 +129,17 @@ block content
 				a.btn-plomo(href="#") NUESTROS BLOGUEROS
 				ul.list-unstyled.list-inline
 					+blogueros('../image/img_blogueros.jpg','Augusto Alvarez Rodrich','Charlie Hebdo, historia que no debe repetirse')
+					+blogueros('../image/img_blogueros.jpg','Augusto Alvarez Rodrich','El único pulpín es Humala')
+					+blogueros('../image/img_blogueros.jpg','Augusto Alvarez Rodrich','Dios ha muerto...tengo las manos')
+					+blogueros('../image/img_blogueros.jpg','Augusto Alvarez Rodrich','El único pulpín es Humala')
 					+blogueros('../image/img_blogueros.jpg','Augusto Alvarez Rodrich','Charlie Hebdo, historia que no debe repetirse')
-					+blogueros('../image/img_blogueros.jpg','Augusto Alvarez Rodrich','Charlie Hebdo, historia que no debe repetirse')
-					+blogueros('../image/img_blogueros.jpg','Augusto Alvarez Rodrich','Charlie Hebdo, historia que no debe repetirse')
-					+blogueros('../image/img_blogueros.jpg','Augusto Alvarez Rodrich','Charlie Hebdo, historia que no debe repetirse')
-					+blogueros('../image/img_blogueros.jpg','Augusto Alvarez Rodrich','Charlie Hebdo, historia que no debe repetirse')
-					+blogueros('../image/img_blogueros.jpg','Augusto Alvarez Rodrich','Charlie Hebdo, historia que no debe repetirse')
-					+blogueros('../image/img_blogueros.jpg','Augusto Alvarez Rodrich','Charlie Hebdo, historia que no debe repetirse')
+					+blogueros('../image/img_blogueros.jpg','Augusto Alvarez Rodrich','El único pulpín es Humala')
+					+blogueros('../image/img_blogueros.jpg','Augusto Alvarez Rodrich','Dios ha muerto...tengo las manos')
+					+blogueros('../image/img_blogueros.jpg','Augusto Alvarez Rodrich','El único pulpín es Humala')
 				a.t-rojo(href="#") Todos los blog
 			//-edicion impresa
 			.row.borde-inf.mg-medio
-				a.btn-rojo(href="#") NEDICION IMPRESA
+				a.btn-rojo(href="#") EDICIÓN IMPRESA
 			//- infografias
 			.row.mg-medio
 				a.btn-plomo(href="#") INFOAGRFIAS
